2007-09-23  Torsten Rahn  <rahn@kde.org>

	* src/lib/PlaceMarkPainter.cpp: 
	Partially fix the position of the label.

2007-09-20  Inge Wallin  <inge@lysator.liu.se>

	Add a View menu to the KDE application.
	* src/marbleui.rc: Add a View menu.

2007-09-20  Tobias Koenig <tokoe@kde.org>

  Major refactoring of the PlaceMark handling.

2007-09-20  Torsten Rahn  <rahn@kde.org>

	* data/flags/flag_gr.svg:
	- Fix greek flag (Bug 150033)

2007-09-18  Torsten Rahn  <rahn@kde.org>

	* src/kdemain.cpp:
	* src/qtmain.cpp:
	* src/lib/MarbleWidget.{cpp,h}:
	* src/lib/AutoSettings.{h,cpp}:
	* src/lib/CMakeLists.txt:

	- Added "--fps" comḿand line option to display framerate
	  on the fly as a preparation for the AutoSettings class.
	- Added stub for AutoSettings class

	* src/marble_part.cpp:
	* src/QtMainWindow.cpp:

	- Fixed bug as pointed out by murdok.lnx@gmail.com

	* src/lib/ClipPainter.cpp:
	* src/lib/MarbleControlBox.cpp:
	* src/lib/TextureColorizer.cpp:

	- Fixed minor issues

	* data/CMakeLists.txt:
	* data/bitmaps/airport.png:
	* data/bitmaps/shipwreck.png:
	* data/svg/shipwreck.svg:

	- Adding new shipwreck symbol for the legend


2007-09-17  Inge Wallin  <inge@lysator.liu.se>

	More work on APIDOX: 
	* src/lib/MarbleWidget.cpp: Fix errors with parameters.
	* src/lib/MarbleWidget.h,
	* src/lib/MarbleControlBox.h,
	* src/lib/MarbleNavigator.h: Much more APIDOX
	
	More work on APIDOX: 
	* src/lib/MarbleNavigator.h: Fix apidox and remove warnings
	* src/lib/MarbleNavigator.cpp (MarbleNavigator): Fix indentation

	APIDOX
	* src/lib/MarbleNavigator.h: Finish apidox
	
	APIDOX
	* src/lib/MarbleWidget.h (northPoleY, northPoleZ): Document
	(zoomView): improve docs
	* src/lib/MarbleControlBox.h (addMarbleWidget): Document
	* src/lib/MarbleNavigator.h: Document file and class.

	Cleaning
	* src/lib/MarbleWidget.cpp: 
	* src/lib/MarbleWidgetInputHandler.cpp (eventFilter): 
	Follow coding standards
	
	Add a main page to the APIdox.
	* src/Mainpage.dox: New file
